[package]
name = "wx-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["std"] }
clap = "4.4.12"
reqwest = "0.11.23"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
